--- a/INSTRUCTIONS.html
+++ b/INSTRUCTIONS.html
@@ -161,7 +161,7 @@ $(document).ready(function () {
 </li>
 <li><strong>PLEASE NOTE: The link to the App is <a href="https://ryanpines.shinyapps.io/ToothGrowthApp/" class="uri">https://ryanpines.shinyapps.io/ToothGrowthApp/</a>. However, it is currently not running as it will cost me a fee. I plan to start running it April 1st Thank you for your understanding</strong><br />
 </li>
-<li><strong>PLEASE NOTE: Please see PNG Files on my Github Repo (under the folder “Doses”) for images of the completed App in the meantime.</strong></li>
+<li><strong>PLEASE NOTE: Please see PNG Files on my Github Repo for images of the completed App in the meantime.</strong></li>
 </ol>
 </div>
 <div id="running-the-application-input-and-output" class="section level2">
